--- a/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
+++ b/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
@@ -98,21 +98,21 @@
               </mat-select>
             </mat-form-field>
           </div>
-          <div fxLayout="row" class="px-24" *ngIf="formPopupGroup.get('type_of_recurrence').value == 'Recurring'" fxLayout.lt-md="column">
+          <div fxLayout="row" class="px-24" *ngIf="formPopupGroup.get('type_of_recurrence').value == 'recurring'" fxLayout.lt-md="column">
             <mat-form-field fxFlex="45" class="is-light form-primary">
               <mat-select placeholder="Pola Pengulangan" formControlName="recurrence_type">
                 <mat-option *ngFor="let item of listRecurrenceTypes" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
             </mat-form-field>
           </div>
-          <div class="px-24" *ngIf="formPopupGroup.get('type_of_recurrence').value == 'Recurring' && formPopupGroup.get('recurrence_type').value === 'Weekly'" [formGroup]="formWeeklyRecurrence">
+          <div class="px-24" *ngIf="formPopupGroup.get('type_of_recurrence').value == 'recurring' && formPopupGroup.get('recurrence_type').value === 'weekly'" [formGroup]="formWeeklyRecurrence">
             <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" class="pb-16" fxLayoutGap="10px">
               <ng-container *ngFor="let item of listWeekDays">
                 <mat-checkbox [formControlName]="item.id" [value]="item.id"></mat-checkbox> {{item.name}} &nbsp;
               </ng-container>
             </div>
           </div>
-          <div fxLayout="row" class="px-24" *ngIf="formPopupGroup.get('type_of_recurrence').value == 'Recurring' && formPopupGroup.get('recurrence_type').value === 'Monthly'" [formGroup]="formMonthlyRecurrence" fxLayout.lt-md="column">
+          <div fxLayout="row" class="px-24" *ngIf="formPopupGroup.get('type_of_recurrence').value == 'recurring' && formPopupGroup.get('recurrence_type').value === 'monthly'" [formGroup]="formMonthlyRecurrence" fxLayout.lt-md="column">
             <mat-form-field fxFlex="45" class="is-light form-primary">
               <mat-select placeholder="Tanggal" formControlName="recurrence_date" multiple>
                 <mat-option *ngFor="let item of listDates" [value]="item">{{item}}</mat-option>
@@ -123,13 +123,13 @@
               </mat-error>
             </mat-form-field>
           </div>
-          <div class="px-24" *ngIf="formPopupGroup.get('type_of_recurrence').value == 'Recurring' && formPopupGroup.get('recurrence_type').value === 'Yearly'">
+          <div class="px-24" *ngIf="formPopupGroup.get('type_of_recurrence').value == 'recurring' && formPopupGroup.get('recurrence_type').value === 'yearly'">
             <div fxLayout="row">
               <div style="font-weight:600;margin-right:20px;min-height:30px;">Tanggal & Bulan Terpilih : </div>
               <div>
                 <mat-chip-list>
                   <mat-chip *ngFor="let item of listDateChosen.value" style="position:unset;margin:0 5px 0 0" [removable]="true" (removed)="removeDateChosen(item)">
-                    <span>{{item}}</span>
+                    <span>{{item.name}}</span>
                     <mat-icon style="padding:0;" matChipRemove>cancel</mat-icon>
                   </mat-chip>
                 </mat-chip-list>
