--- a/src/app/pages/notes-retailer/component/list-notes-retailer.component.html
+++ b/src/app/pages/notes-retailer/component/list-notes-retailer.component.html
@@ -66,7 +66,7 @@
 
         <ngx-datatable-column name="Status Notes" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span *ngIf="row.status === 'Not Active'" class="text-boxed mat-red-700-bg">{{row.status}}</span>
+            <span *ngIf="row.status === 'inactive'" class="text-boxed mat-red-700-bg">{{row.status}}</span>
             <span *ngIf="row.status === 'active'" class="text-boxed mat-green-700-bg">{{row.status}}</span>
           </ng-template>
         </ngx-datatable-column> 
