--- a/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
+++ b/src/app/pages/kpi-setting/component/edit-kpi-setting.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column">
     <!-- HEADER -->
-    <page-content-header [contentTitle]="'Edit KPI Setting'"></page-content-header>
+    <page-content-header [contentTitle]="paramEdit ? 'Edit KPI Setting' : 'Create KPI Setting'"></page-content-header>
     <!-- / HEADER -->
   
     <div class="content p-24">
