--- a/src/app/pages/notes-retailer/component/create-notes-retailer.component.html
+++ b/src/app/pages/notes-retailer/component/create-notes-retailer.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column">
     <!-- HEADER -->
-    <page-content-header [contentTitle]="'Create Notes'"></page-content-header>
+    <page-content-header [contentTitle]="paramEdit ? 'Edit Notes' : 'Create Notes'"></page-content-header>
     <!-- / HEADER -->
   
     <div class="content p-24">
