--- a/src/app/pages/user-management/private-label/supplier-company/create/supplier-company-create.component.html
+++ b/src/app/pages/user-management/private-label/supplier-company/create/supplier-company-create.component.html
@@ -18,7 +18,9 @@
         <div class="p-24" fxLayout="column">
           <div fxLayout="row">
             <mat-form-field fxFlex="100" fxFlex.gt-sm="50" class="is-light">
-              <input matInput type="text" placeholder="Kode Supplier" formControlName="initial" autocomplete="off">
+              <input matInput type="text" placeholder="Kode Supplier" formControlName="initial" autocomplete="off" 
+              (keypress)="keyPressAlphaNumeric($event)"
+              (paste)="keyPressAlphaNumeric($event)">
               <mat-error
                 *ngIf="createForm.controls['initial'].hasError('required') && createForm.controls['initial'].touched ">
                 Kode Supplier harus diisi.
@@ -110,7 +112,7 @@
           </div>
           <div fxLayout="row">
             <mat-form-field fxFlex="50" class="is-light pt-20">
-              <mat-select formControlName="is_open_api" placeholder="Pilih API">
+              <mat-select formControlName="is_open_api" placeholder="Open API">
                 <mat-option [value]="item.status" *ngFor="let item of pilihAPIList">{{item.name}}</mat-option>
               </mat-select>
             </mat-form-field>
