--- a/src/app/pages/user-management/private-label/supplier-company/edit/supplier-company-edit.component.html
+++ b/src/app/pages/user-management/private-label/supplier-company/edit/supplier-company-edit.component.html
@@ -22,7 +22,9 @@
         <div class="p-24" fxLayout="column">
           <div fxLayout="row">
             <mat-form-field fxFlex="100" fxFlex.gt-sm="50" class="is-light">
-              <input matInput type="text" placeholder="Kode Supplier" formControlName="initial" autocomplete="off" #initial *ngIf="!isDetail">
+              <input matInput type="text" placeholder="Kode Supplier" formControlName="initial" autocomplete="off" #initial *ngIf="!isDetail" 
+              (keypress)="keyPressAlphaNumeric($event)"
+              (paste)="keyPressAlphaNumeric($event)">
               <input matInput type="text" placeholder="Kode Supplier" formControlName="initial" autocomplete="off" readonly *ngIf="isDetail">
               <mat-error
                 *ngIf="createForm.controls['initial'].hasError('required') && createForm.controls['initial'].touched ">
@@ -120,7 +122,7 @@
           </div>
           <div fxLayout="row">
             <mat-form-field fxFlex="50" class="is-light pt-20">
-              <mat-select [(ngModel)]="isOpenAPISelected" formControlName="is_open_api" placeholder="Pilih API" *ngIf="!isDetail">
+              <mat-select [(ngModel)]="isOpenAPISelected" formControlName="is_open_api" placeholder="Open API" *ngIf="!isDetail">
                 <mat-option [value]="item.status" *ngFor="let item of pilihAPIList">{{item.name}}</mat-option>
               </mat-select>
               <mat-select [(ngModel)]="isOpenAPISelected" formControlName="is_open_api" placeholder="Pilih API" [disabled]="true" *ngIf="isDetail">
