--- a/src/app/pages/sku-management/db-product-submission/index/index.component.html
+++ b/src/app/pages/sku-management/db-product-submission/index/index.component.html
@@ -18,20 +18,43 @@
   </page-content-header>
   <div class="content p-24">
     <div class="table-wrapper">
-      <div fxLayout="row" fxLayoutAlign="space-between center" class="p-20">
+      <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-between center" class="p-20">
         <h2 style="margin: unset">Daftar Produk</h2>
-        <div class="search-field">
-          <input
-            matInput
-            placeholder="Cari"
-            (keyup)="keyUp.next($event.target.value)"
-            autocomplete="off"
-          />
-          <mat-icon style="font-size: 20px">search</mat-icon>
+        <div [formGroup]="formFilter" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="15px" fxLayoutGap.lt-md="0px" fxFlex="75" fxFlex.lt-md="100" style="width: 100%;">
+          <mat-form-field class="is-light" fxFlex="100">
+            <mat-select placeholder="Kategori" formControlName="category" multiple>
+              <mat-option *ngFor="let item of listCategories" [value]="item.id">{{ item.name }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field class="is-light" fxFlex="100">
+            <mat-select placeholder="Status" formControlName="status" multiple>
+              <mat-option *ngFor="let item of listStatus" [value]="item.id">{{ item.name }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field class="is-light" fxFlex="100">
+            <input
+              matInput
+              placeholder="Cari"
+              autocomplete="off"
+              formControlName="search"
+            />
+            <mat-icon style="font-size: 20px; position: absolute; margin-left: -24px;">search</mat-icon>
+          </mat-form-field>
+          <div fxLayout="row" fxLayoutAlign="center center">
+            <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20" (click)="applyFilter()">
+              Apply
+            </button>
+          </div>
         </div>
       </div>
       <div
-        *ngIf="onLoad"
+        *ngIf="init"
+        class="p-20 h3 text-center"
+      >
+        Silahkan isi filter terlebih dahulu!
+      </div>
+      <div
+        *ngIf="onLoad && !init"
         fxLayout="row"
         fxLayoutAlign="center center"
         class="py-48"
@@ -42,7 +65,7 @@
           color="accent"
         ></mat-spinner>
       </div>
-      <div *ngIf="!onLoad">
+      <div *ngIf="!onLoad && !init">
         <ngx-datatable
           class="material"
           [rows]="rows"
