--- a/src/app/pages/notes-retailer/component/list-notes-retailer.component.html
+++ b/src/app/pages/notes-retailer/component/list-notes-retailer.component.html
@@ -43,7 +43,7 @@
 
         <ngx-datatable-column name="Nama Notes" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-name" >{{row.name}}</span>
+            <span>{{row.name}}</span>
           </ng-template>
         </ngx-datatable-column>
 
