add counter at import audience

--- a/src/app/shared/import-audience/import-audience.component.html
+++ b/src/app/shared/import-audience/import-audience.component.html
@@ -77,6 +77,7 @@
         </tbody>
       </table>
     </div>
+    <div *ngIf="counter" style="margin-top: 5px;"><b>{{counter.total}} Total</b>, {{counter.valid}} Valid, {{counter.invalid}} Invalid</div>
   </div>
 
   <div class="border-top">
