fix stock check IR

--- a/src/app/pages/dte/template/create/personalize/template-create-personalize.component.html
+++ b/src/app/pages/dte/template/create/personalize/template-create-personalize.component.html
@@ -741,21 +741,30 @@
                           </div>
                         </div>
                       </div>
-                      <div fxFlex="45" *ngIf="item.get('type').value === 'stock_check_ir'">
-                        <div class="responsive">
+                      <div fxFlex *ngIf="item.get('type').value === 'stock_check_ir'">
+                        <div class="banner-image-template-selected" *ngIf="templateListImageIR[i].image">
+                          <div id="banner">
+                            <img [src]="templateListImageIR[i].image" alt="Template Stock Check IR">
+                          </div>
+                        </div>
+                        <div class="responsive" *ngIf="!templateListImageIR[i].image">
                           <table class="table">
                             <thead>
                               <tr>
+                                <th nowrap>Image</th>
                                 <th nowrap>Product Name</th>
                                 <th nowrap>QTY</th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr *ngFor="let lst of templateListImageIR[i]['check_list']">
-                                <td nowrap>
+                                <td style="max-width: 150px;">
+                                  <img [src]="lst.IMAGE_BRAND" alt="Stock Check IR" width="100%">
+                                </td>
+                                <td>
                                   {{ lst.PRODUCT_NAME }}
                                 </td>
-                                <td nowrap>
+                                <td>
                                   {{ lst.QUANTITY }}
                                 </td>
                               </tr>
