--- a/src/app/pages/dte/template/edit/template-edit.component.scss
+++ b/src/app/pages/dte/template/edit/template-edit.component.scss
@@ -13,7 +13,7 @@
 
   th,
   td {
-    padding: 8px;
+    padding: 16px;
     text-align: left;
     border-bottom: 1px solid #ddd;
   }
@@ -24,7 +24,7 @@
 
   .responsive {
     overflow-x: auto;
-    max-height: 400px;
+    // max-height: 400px;
     overflow-y: auto;
     border: 1px solid #ddd;
   }
