--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -624,10 +624,8 @@
                     </div>
                   </div>
                   <div fxFlex *ngIf="item.get('type').value === 'stock_check_ir'">
-                    <div class="banner-image-template-selected" *ngIf="templateListImageIR[i].image">
-                      <div id="banner">
-                        <img [src]="templateListImageIR[i].image" alt="Template Stock Check IR">
-                      </div>
+                    <div fxFlex="45" class="banner-image-template-selected" *ngIf="templateListImageIR[i].image">
+                      <img [src]="templateListImageIR[i].image" alt="Template Stock Check IR">
                     </div>
                     <div class="responsive" *ngIf="!templateListImageIR[i].image">
                       <table class="table">
@@ -640,7 +638,7 @@
                         </thead>
                         <tbody>
                           <tr *ngFor="let lst of templateListImageIR[i]['check_list']">
-                            <td style="max-width: 150px;">
+                            <td style="max-width: 100px;">
                               <img [src]="lst.IMAGE_BRAND" alt="Stock Check IR" width="100%">
                             </td>
                             <td>
