--- a/src/app/pages/sku-management/product-cashier/submission/index/index.component.html
+++ b/src/app/pages/sku-management/product-cashier/submission/index/index.component.html
@@ -45,7 +45,7 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field class="is-light" fxFlex="15">
-            <input matInput [matDatepicker]="dari_tanggal" (focus)="dari_tanggal.open()" formControlName="date"
+            <input matInput [matDatepicker]="dari_tanggal" (focus)="dari_tanggal.open()" formControlName="start_date"
               placeholder="Dari Tanggal">
             <mat-datepicker-toggle matSuffix [for]="dari_tanggal">
               <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
