--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -309,7 +309,7 @@
             <div formArrayName="questions"
               *ngFor="let item of templateTaskForm.get('questions')['controls']; let i=index;">
               <div [formGroupName]="i" class="py-24">
-                <div class="question-list" fxLayout="row" fxLayoutAlign="space-between start" fxFlex="1 0 auto">
+                <div class="question-list" fxLayout="row" fxLayoutAlign="space-between center" fxFlex="1 0 auto">
                   <mat-form-field fxFlex="68" class="question is-light"
                     *ngIf="item.get('typeSelection').value['value'] == 'stock_check' && listProductSelected[i].product">
                     <input id="namaProduk" matInput type="text" placeholder="Nama Produk" (input)="keyUp.next($event.target.value)"
@@ -325,18 +325,18 @@
                   <div fxFlex="30" fxLayout="column" fxLayoutAlign="center end" fxFlex="1 0 auto"
                     *ngIf="!checkWording(item.get('type').value)">
                     <button mat-icon-button matTooltip="Sisipkan Video" matTooltipPosition="below"
-                      class="add-image secondary-text" (click)="uploadVideo('question', i)"
+                      class="secondary-text" (click)="uploadVideo('question', i)"
                       *ngIf="item.get('typeSelection').value['value'] !== 'stock_check'">
                       <mat-icon class="secondary-text">videocam</mat-icon>
                     </button>
                     <button mat-icon-button matTooltip="Sisipkan Gambar" matTooltipPosition="below"
-                      class="add-image secondary-text" (click)="uploadImage('question', i)"
+                      class="secondary-text" (click)="uploadImage('question', i)"
                       *ngIf="item.get('typeSelection').value['value'] !== 'stock_check'">
                       <mat-icon class="secondary-text">photo</mat-icon>
                     </button>
                   </div>
 
-                  <div fxLayout="column" fxLayoutGap="24px">
+                  <div fxLayout="column" fxLayoutGap="24px" class="ml-auto">
                     <mat-form-field [id]="'btn-choice-answer-'+(i+1)" class="chooice is-light" fxFlex="30">
                       <mat-select id="tipeQuestion" formControlName="type" (selectionChange)="changeType(item, i)" (click)="selectForm('tipeQuestion')">
                         <mat-select-trigger>
@@ -357,9 +357,12 @@
                         </ng-container>
                       </mat-select>
                     </mat-form-field>
-
-                    <mat-checkbox [id]="'encryption-'+(i)" formControlName="encryption">Encryption</mat-checkbox>
                   </div>
+                </div>
+
+                <div fxLayout="row" fxLayoutGap="24px" fxLayoutAlign="end center" class="py-16">
+                  <mat-checkbox [id]="'image_quality-'+(i)" formControlName="image_quality_detection">Image Quality Detection</mat-checkbox>
+                  <mat-checkbox [id]="'encryption-'+(i)" formControlName="encryption">Encryption</mat-checkbox>
                 </div>
 
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
