--- a/src/app/pages/dte/template/edit/template-edit.component.html
+++ b/src/app/pages/dte/template/edit/template-edit.component.html
@@ -316,7 +316,7 @@
 
             <div formArrayName="questions" *ngFor="let item of templateTaskForm.get('questions')['controls']; let i=index;">
               <div [formGroupName]="i" class="py-24">
-                <div class="question-list" fxLayout="row" fxLayoutAlign="space-between start" fxFlex="1 0 auto">
+                <div class="question-list" fxLayout="row" fxLayoutAlign="space-between center" fxFlex="1 0 auto">
 
                   <mat-form-field fxFlex="68" class="question is-light"
                     *ngIf="item.get('typeSelection').value['value'] == 'stock_check' && listProductSelected[i].product">
@@ -333,12 +333,12 @@
 
                   <div fxFlex="5" fxLayout="column" fxLayoutAlign="center end" fxFlex="1 0 auto">
                     <button mat-icon-button matTooltip="Sisipkan Video" matTooltipPosition="below"
-                      class="add-image secondary-text" (click)="uploadVideo('question', i)"
+                      class="secondary-text" (click)="uploadVideo('question', i)"
                       *ngIf="item.get('typeSelection').value['value'] !== 'stock_check'">
                       <mat-icon class="secondary-text">videocam</mat-icon>
                     </button>
                     <button mat-icon-button matTooltip="Sisipkan Gambar" matTooltipPosition="below"
-                      class="add-image secondary-text" (click)="uploadImage('question', i)"
+                      class="secondary-text" (click)="uploadImage('question', i)"
                       *ngIf="item.get('typeSelection').value['value'] !== 'stock_check'">
                       <mat-icon class="secondary-text">photo</mat-icon>
                     </button>
@@ -362,9 +362,12 @@
                         </mat-option>
                       </mat-select>
                     </mat-form-field>
-
-                    <mat-checkbox [id]="'encryption-'+(i)" formControlName="encryption">Encryption</mat-checkbox>
                   </div>
+                </div>
+
+                <div fxLayout="row" fxLayoutGap="24px" fxLayoutAlign="end center" class="py-16">
+                  <mat-checkbox [id]="'image_quality-'+(i)" formControlName="image_quality_detection">Image Quality Detection</mat-checkbox>
+                  <mat-checkbox [id]="'encryption-'+(i)" formControlName="encryption">Encryption</mat-checkbox>
                 </div>
 
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
