--- a/src/app/pages/settings/role/create/role-create.component.html
+++ b/src/app/pages/settings/role/create/role-create.component.html
@@ -17,10 +17,18 @@
           </mat-form-field>
           <mat-form-field class="is-light form-primary" fxFlex="50" style="padding-left: 10px;">
             <mat-select formControlName="country" placeholder="Negara">
-                <!-- <mat-option value="en">
+              <!-- <mat-option value="en">
                     <div>English</div>
                 </mat-option> -->
-                <mat-option *ngFor="let item of Country" [value]="item.code">{{item.name}}</mat-option>
+              <mat-option *ngFor="let item of Country" [value]="item.code">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div fxLayout="row" class="px-16 pt-24 pb-8" fxLayoutAlign="start center">
+          <mat-form-field class="is-light form-primary" fxFlex="50" style="padding-left: 10px;">
+            <mat-select [formControl]="is_otp" placeholder="OTP">
+              <mat-option value="1">Ya</mat-option>
+              <mat-option value="0">Tidak</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -103,7 +111,8 @@
                   <div fxFlex="25" *ngFor="let item of items.value">
                     <div class="access-name">{{item.nama | toCapitalize}}</div>
                     <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="item.status"
-                    [disabled]="item.disabled" (change)="onToggleChange(item, items, role, $event)"></mat-slide-toggle>
+                      [disabled]="item.disabled" (change)="onToggleChange(item, items, role, $event)">
+                    </mat-slide-toggle>
                   </div>
                 </div>
               </div>
